# Nuggies

./: .editorconfig  .env.example  .gitignore  Cargo.toml  NUGGIES_SPEC.md  README.md
.git-hub/workflows/: ci.yml  lint.yml  release.yml
ai/: explain.rs  local_model.rs  mod.rs
automation/: executor.rs  mod.rs  parser.rs  schema.rs
cli/: main.rs
cli/commands/: compare.rs  config.rs  doctor.rs  explain.rs  install.rs  mod.rs  remove.rs  rollback.rs  search.rs  update.rs
cli/output/: json.rs  plain.rs  table.rs
community/: lists.rs  mod.rs  ratings.rs  tags.rs  warnings.rs
core/: config.rs  errors.rs  logger.rs  mod.rs  permissions.rs  sandbox.rs  system.rs
docs/: architecture.md  cli.md  config.md  packaging.md  philosophy.md
examples/: automation_pipeline.yaml  custom_repo.yaml  nuggies.yaml
gui/: README.md  app.rs  bridge.rs  mod.rs  placeholder.txt  state.rs
gui/backend_bridge/: cli_bridge.rs  mod.rs  package_api.rs  runtime_bridge.rs
gui/components/: action_buttons.rs  dependency_graph.rs  mod.rs  package_card.rs  search_bar.rs  security_panel.rs  transparency_panel.rs
gui/events/: mod.rs  (+2 more)
integrations/: git.rs  github.rs  local_repo.rs  mod.rs  remote_repo.rs
pkg/: compare.rs  dependency.rs  manager.rs  mod.rs  package.rs  version.rs
scripts/: bootstrap.sh  doctor.sh  install.sh  uninstall.sh
security/: audit.rs  mod.rs  network_monitor.rs  sandbox_audit.rs  signatures.rs  trust_score.rs
transparency/: build_logs.rs  command_preview.rs  dependency_tree.rs  mod.rs  permission_diff.rs  update_diff.rs
tui/: app.rs  keybindings.rs  ui.rs
(+45 files in other folders)
